<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context=".ImageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4.5"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="221dp"
            android:layout_height="233dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_rotate_to_right"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@+id/imageview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageview"
            app:layout_constraintTop_toTopOf="@+id/imageview"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_rotate_right_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3.5"
        android:elevation="@dimen/cardview_compat_inset_shadow"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtObjectField"
                android:layout_width="391dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="@dimen/margin_1"
                android:layout_marginTop="20dp"
                android:hint="@string/trName"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:startIconDrawable="@drawable/ic_text_fields_black_24dp"
                app:errorEnabled="true"
                app:helperText="@string/required"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtObjectField2"
                android:layout_width="391dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="@dimen/margin_1"
                android:layout_marginTop="90dp"
                android:hint="@string/enName"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:startIconDrawable="@drawable/ic_text_fields_black_24dp"
                app:errorEnabled="true"
                app:helperText="@string/required"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:theme="@style/CustomButtonStyle"
                android:layout_width="121dp"
                android:layout_height="45dp"
                android:layout_below="@+id/txtObjectField2"
                android:layout_alignStart="@+id/txtObjectField2"
                android:layout_alignEnd="@+id/txtObjectField2"
                android:layout_marginStart="264dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="6dp"
                android:text="@string/save"></Button>
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>