<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context="com.mob.cameraxxx.AccountActivity">

    <Button
        android:id="@+id/faceAuthButton"
        style="@style/CustomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#085394"
        android:drawableLeft="@drawable/facebook_68_189780"
        android:drawablePadding="5dp"
        android:fontFamily="@font/roboto_medium"
        android:foreground="@drawable/state_pressed_square"
        android:gravity="center|center_horizontal|center_vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423" />


    <Button
        android:id="@+id/googleAuthButton"
        style="@style/CustomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#CF2A27"
        android:drawableLeft="@drawable/google_457_613463"
        android:drawablePadding="5dp"
        android:fontFamily="@font/roboto_medium"
        android:foreground="@drawable/state_pressed_square"
        android:gravity="center|center_horizontal|center_vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/faceAuthButton"
        app:layout_constraintStart_toStartOf="@+id/faceAuthButton"
        app:layout_constraintTop_toBottomOf="@+id/faceAuthButton" />

    <Button
        android:id="@+id/emailAuth"
        style="@style/CustomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#3c6e71"
        android:drawableLeft="@drawable/login"
        android:drawablePadding="5dp"
        android:fontFamily="@font/roboto_medium"
        android:foreground="@drawable/state_pressed_square"
        android:gravity="center|center_horizontal|center_vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/emailAuth"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/googleAuthButton"
        app:layout_constraintStart_toStartOf="@+id/googleAuthButton"
        app:layout_constraintTop_toBottomOf="@+id/googleAuthButton"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
